css/universal-bar.css
.universal-bar{
	background-color:#E7E7E7;
	height:45px;
}

.universal-bar ul.title-area {
	margin: 0;
	overflow: hidden;
}

.universal-bar ul.menu.inline-list{
	position:relative;
	overflow:visible;
	margin:0;
}

.universal-bar ul.menu.inline-list li{
	float:left;
	margin:0;
}

.universal-bar ul.menu.inline-list > li > a:not(.button){
	color:#222;
}

.universal-bar ul.menu.inline-list > li > a{
	line-height:45px;
	padding:0 1rem;
	height:45px;
	display:inline-block;
}

.universal-bar ul.menu.inline-list > li > a span{
	margin-left:.25rem;
}

.universal-bar ul.menu.inline-list > li > a.button{
	margin-bottom:0;
}

.universal-bar ul.menu.inline-list > li > a.login-button {
  background-color: #27ae60;
	color:#fff;
	border:1px solid #27ae60;
	border-radius:3px;
	height:43px;
}

.notif-count{
	background-color: #c42b2b;
	padding: .25rem;
	font-size: .75rem;
	position:relative;
	top:-.5rem;
	display:none;
}

.reveal-modal.side-drawer{
	position:fixed;
	top:0 !important;
	left:-23rem;
	margin:0;
	border-top:0;
	border-bottom:0;
	border-left:0;
	border-radius:0;
	width:23rem;
	max-width:calc(100% - 3rem);
	height:100%;
	transition:left .2s ease;
	-webkit-overflow-scrolling:touch;
	overflow:auto;
}

.reveal-modal.side-drawer.open{
	left:0;
}

.reveal-drawer-footer{
	border-top:1px solid #808080;
	text-align:center;
	padding:1rem;
	position:absolute;
	bottom:0;
	left:0;
	width:100%;
	background-color:#fff;
}

#sites-reveal-drawer ul.sites-list{
	max-height:100%;
	overflow-y:auto;
	-webkit-overflow-scrolling:touch;
}

#sites-reveal-drawer ul.sites-list li{
	margin-bottom:1rem;
}

#sites-reveal-drawer ul.sites-list a{
	display:block;
}

.side-drawer .fill-drawer{
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
	-webkit-overflow-scrolling: touch;
	overflow:auto;
	border:0;
}

.side-drawer.reveal-modal .close-reveal-modal {
  font-size: 2.5rem;
}

.notif-ication a{
	display:block;
	color:inherit;
	padding: 1rem;
	border-bottom: 1px solid rgb(162, 162, 162);
}

.notif-ication .notif-message p{
	display:inline;
}

.notif-ication .notif-created{
	font-size:.875rem;
	color:#888;
}

.notif-ication-wrapper{
	position:relative;
}

.notif-ication-wrapper .notif-ication a{
	padding-right:2rem;
}

.notif-ication-wrapper .flag-read-wrapper{
	position:absolute;
	top:.5rem;
	right:.5rem;
}

.notif-ication-wrapper .flag-read-wrapper a.flag-link-toggle{
		text-indent:9999px;
}

.side-drawer .action-panel{
	position: absolute;
	top: 0;
	left: 100%;
	margin-left: .5rem;
}

.side-drawer .action-panel a{
	color: white;
	display:block;
	margin-bottom:.5rem;
}

.side-drawer .action-panel .fa{
	font-size: 2rem;
}

.reveal-modal.side-drawer .close-reveal-modal{
	font-size: 2.5rem;
	position: static;
	color: white;
}

